@@ -6,6 +6,9 @@
 # This file is released under Creative Commons Zero 1.0 (CC0-1.0) and part of
 # the program "Back In Time". The program as a whole is released under GNU
 # General Public License v2 or any later version (GPL-2.0-or-later).
+# See file/folder LICENSE or
+# go to <https://spdx.org/licenses/CC0-1.0.html>
+# and <https://spdx.org/licenses/GPL-2.0-or-later.html>.
 """A generic daemon class.
 
     Original from:
