@@ -1,3 +1,12 @@
+<!--
+SPDX-FileCopyrightText: 2022 Jürgen Altfeld (aryoda)
+
+SPDX-License-Identifier: GPL-2.0-or-later
+
+This file is part of the program "Back In Time" which is released under GNU
+General Public License v2 (GPLv2). See file/folder LICENSE or go to
+<https://spdx.org/licenses/GPL-2.0-or-later.html>
+-->
 # Using Sphinx to write and build documentation
 <sub>Feel free to [open issues](https://github.com/bit-team/backintime/issues)
 or contact the
