@@ -1,11 +1,21 @@
+<!--
+SPDX-FileCopyrightText: 2022 Back In Time Team
+
+SPDX-License-Identifier: GPL-2.0-or-later
+
+This file is part of the program "Back In Time" which is released under GNU
+General Public License v2 (GPLv2). See file/folder LICENSE or go to
+<https://spdx.org/licenses/GPL-2.0-or-later.html>
+-->
 # Documentation for Maintainers and Developers
 
 <!-- TOC start -->
-- [Using Sphinx to write and build documentation](1_doc_maintenance_howto.md)
+- [Organization and building of documentation for _Back In Time_](1_doc_howto.md)
+- [(out-dated) Build documentation with Sphinx](1b_doc_sphinx_howto.md)
 - [Localization and translation using Weblate](2_localization.md)
 - [How to setup openssh for unit tests](3_How_to_set_up_openssh_server_for_ssh_unit_tests.md)
 - [Usage of control files (locks, flocks, logs and others)](4_Control_files_usage_(locks_flocks_logs_and_others).md)
 - [How to prepare and publish a new BiT release](BiT_release_process.md)
 <!-- TOC end -->
 
-<sub>Dec 2023</sub>
+<sub>Sept 2024</sub>
