@@ -1,11 +1,25 @@
+# SPDX-FileCopyrightText: 2024 Kosta Vukicevic (stcksmsh)
+# SPDX-FileCopyrightText: 2024 Christian Buhtz <c.buhtz@posteo.jp>
+#
+# SPDX-License-Identifier: CC0-1.0
+#
+# This file is released under Creative Commons Zero 1.0 (CC0-1.0) and part of
+# the program "Back In Time". The program as a whole is released under GNU
+# General Public License v2 or any later version (GPL-2.0-or-later).
+# See file/folder LICENSE or
+# go to <https://spdx.org/licenses/CC0-1.0.html>
+# and <https://spdx.org/licenses/GPL-2.0-or-later.html>.
+
 # Project information
 site_name: Back In Time - User Manual
-site_author: BIT Team
+site_author: Back In Time Team
 
 # Source files (markdown)
 docs_dir: src
+
 # Output directory
 site_dir: html
+
 # site_url: https://backintime-docs.readthedocs.io/en/latest/
 # site_description: Back In Time is a simple backup tool for Linux inspired by "FlyBack".
 
