@@ -1,0 +1,7 @@
+# See https://reuse.software/faq/#bulk-license
+version = 1
+
+[[annotations]]
+path = "_images/**"
+SPDX-License-Identifier = "GPL-2.0-or-later"
+SPDX-FileCopyrightText = "2024 Kosta Vukicevic (@stcksmsh)"
