@@ -1,3 +1,13 @@
+<!--
+SPDX-FileCopyrightText: 2016 Germar Reitze
+
+SPDX-License-Identifier: GPL-2.0-or-later
+
+This file is part of the program "Back In Time" which is released under GNU
+General Public License v2 (GPLv2).
+See file/folder LICENSE or
+go to <https://spdx.org/licenses/GPL-2.0-or-later.html>
+-->
 # Additional sources
 
 - [FAQ - Frequently Asked Questions](https://github.com/bit-team/backintime/blob/dev/FAQ.md)
