@@ -1,6 +1,7 @@
 Back In Time
 
 Version 1.5.3-dev (development of upcoming release)
+* Doc: User manual (build with MkDocs) (#1838)
 * Feature: Support language Interlingua (Occidental)
 * Feature: Warn if destination directory is formatted as NTFS (#1854) (David Gibbs @fallingrock)
 * Breaking Change: Minimal Python version 3.9 required (#1731)
